--- a/src/styles/hero.module.css
+++ b/src/styles/hero.module.css
@@ -1,21 +1,42 @@
 :root {
     --off-white: #f8f9fa;
-    --navy-blue: #12274b;
+    --navy-blue: #11284c;
 }
 
 .hero {
-    background-color: var(--off-white);
-    padding: 6rem 2rem;
-    text-align: center;
+  position: relative;
+  padding: 3rem 1.5rem;
+  text-align: center;
+  overflow: hidden;
 }
+
+.heroBg {
+    position: absolute ;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+    opacity: 0.99;
+}
+
 .heroContainer {
-    max-width: 48rem;
-    margin: auto;
-    text-align: center;
+  max-width: 48rem;
+  margin: 0 auto;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.85);
+  padding: 2rem;
+  border-radius: 1rem;
+  backdrop-filter: blur(8px);
+}
+.logo{
+    width: 200px;
+    margin-bottom: 2rem;
 }
 .heroTitle {
   font-size: 2.5rem;
-  font-family: "Roc Grotesk", sans-serif;
+  font-family: 'Work Sans', sans-serif;
   color: var(--navy-blue);
   margin-bottom: 1.5rem;
   font-weight: 700;
@@ -23,7 +44,7 @@
 }
 .paragraph {
     font-size: 1.25rem;
-    font-family: "Roc Grotesk", sans-serif;
+    font-family: 'Work Sans', sans-serif;
     font-weight: 400;
     color: var(--navy-blue);
     margin-bottom: 2.5rem;
@@ -31,25 +52,4 @@
     max-width: 700px;
     margin-left: auto;
     margin-right: auto;
-}
-.buttonContainer {
-    display: flex;
-    justify-content: center;
-    gap: 1rem;  
-}
-.primaryButton{
-    background-color: var(--navy-blue);
-    font-family: "Montserrat", sans-serif;
-    color: var(--off-white);
-    padding: 1rem 2rem;
-    border-radius: 6px;
-    font-weight: 600;
-}
-.secondaryButton{
-    background-color: transparent;
-    color: var(--navy-blue);
-    padding: 1rem 2rem;
-    border: 2px solid var(--navy-blue);
-    border-radius: 6px;
-    font-weight: 600;
 }
