--- a/src/styles/weekly-exercises.module.css
+++ b/src/styles/weekly-exercises.module.css
@@ -91,8 +91,10 @@
 }
 
 .dropdownMenu {
-  position: absolute;;
+  position: absolute;
   top: calc(100% + 0.5rem);
+  right: 0;
+  left: auto;
   margin-top: 0.5rem;
   background-color: white;
   border: 1px solid rgba(0, 0, 0, 0.08);
